<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpperActivity"
    tools:ignore="ContentDescription">

    <Button
        android:id="@+id/btnTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_view_quilt"
        android:text="@string/btnTable"
        android:textAllCaps="false"
        android:textColor="#0288d1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_donut_large"
        android:text="@string/btnSet"
        android:textAllCaps="false"
        android:textColor="#0288d1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPokaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_timeline"
        android:text="@string/btnPokaz"
        android:textAllCaps="false"
        android:textColor="#0288d1"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnTable"
        app:layout_constraintStart_toEndOf="@+id/btnSet"
        app:layout_constraintTop_toTopOf="@+id/btnSet" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_action_exit"
        android:text="@string/btnExit"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_unit_id1"
        app:layout_constraintBottom_toTopOf="@+id/btnPokaz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExit" />

</android.support.constraint.ConstraintLayout>